# autoanneal

./: .dockerignore  Cargo.toml  Dockerfile  Dockerfile.manager  Makefile  README.md  build_check.sh  check.sh  check_build.sh  check_fix.sh  config.example.yaml  docker-compose.yaml  test_build.rs  test_check.rs  test_check.sh  test_path.rs
.cargo/: config.toml
.github/workflows/: build.yml
charts/autoanneal/: Chart.yaml  values.yaml
charts/autoanneal/templates/: NOTES.txt  _helpers.tpl  configmap.yaml  cronjob.yaml  job.yaml  manager-configmap.yaml  manager-deployment.yaml  manager-service.yaml  manager-serviceaccount.yaml  secret.yaml
crates/lib/: Cargo.toml
crates/lib/src/: cleanup.rs  config.rs  guardrails.rs  lib.rs  llm.rs  logging.rs  models.rs  result.rs  retry.rs  worktree.rs
crates/lib/src/agent/: bridge.rs  client.rs  conversation.rs  mod.rs  output_filter.rs  provider.rs  research_tools.rs  tools.rs
crates/lib/src/phases/: analysis.rs  ci_fix.rs  critic.rs  critic_panel.rs  implement.rs  issue_investigation.rs  mod.rs  plan.rs  pr_review.rs  preflight.rs  recon.rs
crates/lib/src/prompts/: ci_fix.rs  critic.rs  critic_panel.rs  doc_analysis.rs  fix_build.rs  implement.rs  mod.rs  plan.rs  pr_review.rs  recon.rs  system.rs
crates/manager/: Cargo.toml
crates/manager/src/: config.rs  main.rs  metrics.rs  scheduler.rs  server.rs  state.rs  webhook.rs
crates/manager/src/executor/: docker.rs  kubernetes.rs  mod.rs
crates/worker/: Cargo.toml
crates/worker/src/: main.rs  orchestrator.rs
docs/: architecture.md  docker.md  kubernetes.md  prompts.md
src/: claude.rs  cleanup.rs  config.rs  guardrails.rs  llm.rs  logging.rs  main.rs  models.rs  orchestrator.rs  retry.rs  worktree.rs
src/agent/: api_types.rs  bridge.rs  client.rs  context.rs  conversation.rs  mod.rs  output_filter.rs  provider.rs  research_tools.rs  tools.rs
src/phases/: analysis.rs  ci_fix.rs  critic.rs  critic_panel.rs  implement.rs  issue_investigation.rs  mod.rs  plan.rs  pr_review.rs  preflight.rs  recon.rs
src/prompts/: analysis.rs  ci_fix.rs  critic.rs  critic_panel.rs  doc_analysis.rs  fix_build.rs  implement.rs  issue_investigation.rs  mod.rs  pr_review.rs  system.rs
test_compile/: Cargo.toml  build_check_local.sh
test_compile/src/: main.rs
