[workspace]
resolver = "2"
members = [
    "crates/lib",
    "crates/worker",
    "crates/manager",
]

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
anyhow = "1"
thiserror = "2"
sha2 = "0.11"
hex = "0.4"
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }
async-trait = "0.1"
reqwest = { version = "0.12", features = ["json", "blocking"] }
glob = "0.3"
regex = "1"
libc = "0.2"
lz4_flex = "0.13.0"
tempfile = "3"
