[package]
name = "autoanneal-lib"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { workspace = true }
clap = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }
chrono = { workspace = true }
async-trait = { workspace = true }
reqwest = { workspace = true }
glob = { workspace = true }
regex = { workspace = true }
libc = { workspace = true }
lz4_flex = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
